# philosophers

./: CMakeLists.txt  main.c  philo_one.h  philosophers.c  philosophers.h
libft/: ft_itoa.c  libft.h
philo/: Makefile  controller.c  eat.c  philo  philo.c  philo.h  philo_one  philo_one.c  philo_one.h  sleep.c  types.h
philo/philo.dSYM/Contents/Resources/DWARF/: philo
philo/utility/: ft_atoi.c  ft_isdigit.c  ft_strlen.c  init.c  utils.c  utils.h
philo_one/: philo_one.h  philosophers.c
utility/: init.c  utils.c  utils.h
